src/objects/CMAssignment__c.object
<CustomObject>
    <fields>
        <fullName>AreaCode__c</fullName>
        <formula>Area__r.Name</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>AreaCode</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>AreaNumber__c</fullName>
        <formula>TEXT(Area__r.AreaNumber__c)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>AreaNumber</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>AreaRegion__c</fullName>
        <formula>TEXT(Area__r.Region__c)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>AreaRegion</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Area__c</fullName>
        <label>Area</label>
        <referenceTo>Area__c</referenceTo>
        <relationshipLabel>CM Assignments</relationshipLabel>
        <relationshipName>CM_Assignments</relationshipName>
        <relationshipOrder>0</relationshipOrder>
        <type>MasterDetail</type>
    </fields>
    <fields>
        <fullName>CaseManagerName__c</fullName>
        <formula>CaseManager__r.FirstName +&apos; &apos;+CaseManager__r.LastName</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Case Manager Name</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>CaseManager__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Case Manager</label>
        <referenceTo>User</referenceTo>
        <relationshipName>CM_Assignments_del</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>ExternalId__c</fullName>
        <caseSensitive>true</caseSensitive>
        <defaultValue>&apos;A&apos;</defaultValue>
        <description>AreaId + UserId to be used to lookup the values for deletes.</description>
        <externalId>true</externalId>
        <label>External Id</label>
        <length>255</length>
        <required>true</required>
        <type>Text</type>
        <unique>true</unique>
    </fields>
    <label>CM Assignment</label>
    <nameField>
        <displayFormat>CMA ID-{0000000000}</displayFormat>
        <label>CM Assignment ID</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>CM Assignments</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
    <validationRules>
        <fullName>CaseManagerRequired</fullName>
        <active>true</active>
        <errorConditionFormula>ISBLANK(CaseManager__c)</errorConditionFormula>
        <errorDisplayField>CaseManager__c</errorDisplayField>
        <errorMessage>Case Manager is required.</errorMessage>
    </validationRules>
</CustomObject>